--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 bin/
 obj/
 
-/ICSharpCode.Decompiler/Properties/AssemblyInfo.cs
-/ILSpy/Properties/AssemblyInfo.cs
+/build/ILSpyVisualizer.Plugin.dll
+/build/ILSpyVisualizer.Plugin.pdb
 *.suo
 *.user
 /Resharper-ILSpy-Style.xml
