--- a/sources/ILSpyVisualizer/ILSpyVisualizer.csproj
+++ b/sources/ILSpyVisualizer/ILSpyVisualizer.csproj
@@ -95,16 +95,33 @@
     <Compile Include="AssemblyBrowser\AssemblyBrowserWindow.xaml.cs">
       <DependentUpon>AssemblyBrowserWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="AssemblyBrowser\AssemblyBrowserWindowViewModel.cs" />
-    <Compile Include="AssemblyBrowser\AssemblyViewModel.cs" />
+    <Compile Include="AssemblyBrowser\UserControls\CachingScreenPresenter.xaml.cs">
+      <DependentUpon>CachingScreenPresenter.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AssemblyBrowser\UserControls\CommandsView.xaml.cs">
+      <DependentUpon>CommandsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AssemblyBrowser\Screens\GraphScreen.cs" />
+    <Compile Include="AssemblyBrowser\Screens\GraphScreenView.xaml.cs">
+      <DependentUpon>GraphScreenView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AssemblyBrowser\Screens\Screen.cs" />
+    <Compile Include="AssemblyBrowser\Screens\SearchScreen.cs" />
+    <Compile Include="AssemblyBrowser\Screens\SearchScreenView.xaml.cs">
+      <DependentUpon>SearchScreenView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="AssemblyBrowser\ViewModels\AssemblyBrowserWindowViewModel.cs" />
+    <Compile Include="AssemblyBrowser\ViewModels\AssemblyViewModel.cs" />
     <Compile Include="AssemblyBrowser\BrowseAssemblyContextMenuEntry.cs" />
-    <Compile Include="AssemblyBrowser\EventViewModel.cs" />
+    <Compile Include="AssemblyBrowser\ViewModels\EventViewModel.cs" />
     <Compile Include="AssemblyBrowser\Graph.cs" />
-    <Compile Include="AssemblyBrowser\MemberViewModel.cs" />
-    <Compile Include="AssemblyBrowser\MethodViewModel.cs" />
-    <Compile Include="AssemblyBrowser\PropertyViewModel.cs" />
-    <Compile Include="AssemblyBrowser\TypeViewModel.cs" />
+    <Compile Include="AssemblyBrowser\ViewModels\HierarchyViewModel.cs" />
+    <Compile Include="AssemblyBrowser\ViewModels\MemberViewModel.cs" />
+    <Compile Include="AssemblyBrowser\ViewModels\MethodViewModel.cs" />
+    <Compile Include="AssemblyBrowser\ViewModels\PropertyViewModel.cs" />
+    <Compile Include="AssemblyBrowser\ViewModels\TypeViewModel.cs" />
     <Compile Include="Infrastructure\DelegateCommand.cs" />
+    <Compile Include="Infrastructure\UserCommand.cs" />
     <Compile Include="Infrastructure\ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -116,15 +133,31 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="AssemblyBrowser\ControlStylesDictionary.xaml">
+    <Page Include="AssemblyBrowser\Dictionaries\ControlStylesDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="AssemblyBrowser\DataTemplatesDictionary.xaml">
+    <Page Include="AssemblyBrowser\Dictionaries\DataTemplatesDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="AssemblyBrowser\ImagesDictionary.xaml">
+    <Page Include="AssemblyBrowser\Dictionaries\ImagesDictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AssemblyBrowser\UserControls\CachingScreenPresenter.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AssemblyBrowser\UserControls\CommandsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AssemblyBrowser\Screens\GraphScreenView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AssemblyBrowser\Screens\SearchScreenView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
