--- a/sources/ILSpyVisualizer/ILSpyVisualizer.csproj
+++ b/sources/ILSpyVisualizer/ILSpyVisualizer.csproj
@@ -85,10 +85,6 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="WPFExtensions, Version=1.0.4193.26088, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\build\WPFExtensions.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Analyzer\AnalyzeInWindowContextMenuEntry.cs" />
@@ -126,6 +122,13 @@
     <Compile Include="AssemblyBrowser\ViewModels\PropertyViewModel.cs" />
     <Compile Include="AssemblyBrowser\ViewModels\TypeViewModel.cs" />
     <Compile Include="Controls\PopupNonTopmost.cs" />
+    <Compile Include="Controls\ZoomControl\ContentSizeChangedDelegate.cs" />
+    <Compile Include="Controls\ZoomControl\Converters\DoubleToLog10Converter.cs" />
+    <Compile Include="Controls\ZoomControl\Converters\EqualityToBooleanConverter.cs" />
+    <Compile Include="Controls\ZoomControl\ZoomContentPresenter.cs" />
+    <Compile Include="Controls\ZoomControl\ZoomControl.cs" />
+    <Compile Include="Controls\ZoomControl\ZoomControlModes.cs" />
+    <Compile Include="Controls\ZoomControl\ZoomViewModifierMode.cs" />
     <Compile Include="Infrastructure\DelegateCommand.cs" />
     <Compile Include="Infrastructure\UserCommand.cs" />
     <Compile Include="Infrastructure\ViewModelBase.cs" />
@@ -171,6 +174,10 @@
     <Page Include="AssemblyBrowser\Screens\SearchScreenView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
