Ancestry Browser: Added filter for virtual members, displayed original member class for all overrides

--- a/sources/ILSpyVisualizer/ILSpyVisualizer.csproj
+++ b/sources/ILSpyVisualizer/ILSpyVisualizer.csproj
@@ -111,6 +111,7 @@
     <Compile Include="AssemblyBrowser\Graph.cs" />
     <Compile Include="Common\CommandsGroup\GroupedUserCommand.cs" />
     <Compile Include="Common\FieldViewModel.cs" />
+    <Compile Include="Common\ICanBeVirtual.cs" />
     <Compile Include="Common\MemberViewModel.cs" />
     <Compile Include="Common\MethodViewModel.cs" />
     <Compile Include="Common\PropertyViewModel.cs" />
