--- a/sources/ILSpyVisualizer/ILSpyVisualizer.csproj
+++ b/sources/ILSpyVisualizer/ILSpyVisualizer.csproj
@@ -38,13 +38,17 @@
     <StartProgram>..\..\build\ILSpy.exe</StartProgram>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ICSharpCode.TreeView">
+    <Reference Include="ICSharpCode.TreeView, Version=4.1.0.7275, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\build\ICSharpCode.TreeView.dll</HintPath>
     </Reference>
-    <Reference Include="ILSpy">
+    <Reference Include="ILSpy, Version=1.0.0.1000, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <ExecutableExtension>.exe</ExecutableExtension>
       <HintPath>..\..\build\ILSpy.exe</HintPath>
     </Reference>
-    <Reference Include="Mono.Cecil">
+    <Reference Include="Mono.Cecil, Version=0.9.5.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\build\Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -268,6 +272,10 @@
     <Compile Include="HAL\ILSpy\BrowseDependenciesContextMenuEntry.cs" />
     <Compile Include="HAL\Reflector\Converter.cs" />
     <Compile Include="HAL\Reflector\Package.cs" />
+    <Compile Include="Images\AccessOverlayIcon.cs" />
+    <Compile Include="Images\Images.cs" />
+    <Compile Include="Images\MemberIcon.cs" />
+    <Compile Include="Images\TypeIcon.cs" />
     <Compile Include="Infrastructure\DelegateCommand.cs" />
     <Compile Include="Infrastructure\UserCommand.cs" />
     <Compile Include="Infrastructure\ViewModelBase.cs" />
@@ -348,6 +356,65 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\Assembly.png" />
+    <Resource Include="Images\AssemblyList.png" />
+    <Resource Include="Images\AssemblyWarning.png" />
+    <Resource Include="Images\Back.png" />
+    <Resource Include="Images\Breakpoint.png" />
+    <Resource Include="Images\Class.png" />
+    <Resource Include="Images\ClearSearch.png" />
+    <Resource Include="Images\Constructor.png" />
+    <Resource Include="Images\CurrentLine.png" />
+    <Resource Include="Images\Delegate.png" />
+    <Resource Include="Images\Delete.png" />
+    <Resource Include="Images\DisabledBreakpoint.png" />
+    <Resource Include="Images\Enum.png" />
+    <Resource Include="Images\EnumValue.png" />
+    <Resource Include="Images\Event.png" />
+    <Resource Include="Images\ExtensionMethod.png" />
+    <Resource Include="Images\Field.png" />
+    <Resource Include="Images\FieldReadOnly.png" />
+    <Resource Include="Images\Find.png" />
+    <Resource Include="Images\FindAssembly.png" />
+    <Resource Include="Images\Folder.Closed.png" />
+    <Resource Include="Images\Folder.Open.png" />
+    <Resource Include="Images\Forward.png" />
+    <Resource Include="Images\Indexer.png" />
+    <Resource Include="Images\Interface.png" />
+    <Resource Include="Images\Library.png" />
+    <Resource Include="Images\Literal.png" />
+    <Resource Include="Images\Method.png" />
+    <Resource Include="Images\NameSpace.png" />
+    <Resource Include="Images\OK.png" />
+    <Resource Include="Images\Open.png" />
+    <Resource Include="Images\Operator.png" />
+    <Resource Include="Images\OverlayInternal.png" />
+    <Resource Include="Images\OverlayPrivate.png" />
+    <Resource Include="Images\OverlayProtected.png" />
+    <Resource Include="Images\OverlayProtectedInternal.png" />
+    <Resource Include="Images\OverlayStatic.png" />
+    <Resource Include="Images\PInvokeMethod.png" />
+    <Resource Include="Images\PrivateInternal.png" />
+    <Resource Include="Images\Property.png" />
+    <Resource Include="Images\ReferenceFolder.Closed.png" />
+    <Resource Include="Images\ReferenceFolder.Open.png" />
+    <Resource Include="Images\Refresh.png" />
+    <Resource Include="Images\Resource.png" />
+    <Resource Include="Images\ResourceImage.png" />
+    <Resource Include="Images\ResourceResourcesFile.png" />
+    <Resource Include="Images\ResourceXml.png" />
+    <Resource Include="Images\ResourceXsd.png" />
+    <Resource Include="Images\ResourceXslt.png" />
+    <Resource Include="Images\SaveFile.png" />
+    <Resource Include="Images\Search.png" />
+    <Resource Include="Images\StaticClass.png" />
+    <Resource Include="Images\Struct.png" />
+    <Resource Include="Images\SubTypes.png" />
+    <Resource Include="Images\SuperTypes.png" />
+    <Resource Include="Images\ViewCode.png" />
+    <Resource Include="Images\VirtualMethod.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
